# learning_python

./: .gitignore  2_Args_positional_optional.py  add_key.txt  bytes.py  calculator.py  color_text_terminal.py  complex_sum.py  cur_practice.py  decorator_with_arguments.py  diving_board.py  eight_queens.py  graphs.py  list_of_sources.txt  practice.py  practice2.py  pratice3.py  pratice4.py  pratice5.py  pyproject.toml  requirements.txt  root.py  setup.py  skfj.py  test.py  test.txt  test_calculator.py  unpack.py  utils.py
Argparse/: 1_base.py  3_hello.py
Decorators/: 01_decorator_without_arguments.py  1 Change func_name.py  2. Function inside function.py  3. Two Functions inside function.py  4. Do something before.py  5. Manual decorator.py  6. Decorator from scratch.py  6. My_decorator.py  7.class_method, static_method.py  8. My_decorator with args.py  Habr articles decorators  Pizza( classmethod, staticmethod).py  decorator_with_parameters.py  decorator_with_parameters_tag.py
Exceptions/: 1.Zerodivision.py  1.Zerodivision2.py  2.FileNotFoundError.py  3.Try_in_except.py  4.customs_exceptions.py  5.customs_exceptions.py  6.customs_exceptions.py  7.traceback.py  error_scope.py  practice.py
Functions/: HW2.py  LEGB.py  double_function.py  fibo_gen.py  fibo_iterator.py  for_iter.py  higher_order_functions.py  iterators, generators.py  lambda.py  my_seq.py  odd_iterator_generator.py  partial.py  polindrome_gen.py  scope_practice.py  send_gen.py  zip.py
Generators/: conveyors.py  log.txt  pr_1.py  pr_2_close_throw.py  pr_3.1_send.py  pr_3.2_send.py  pr_3.3_send_count.py  (+5 more)
(+477 files in other folders)
