[tool.poetry]
name = "learning_python"
version = "0.1.0"
description = ""
authors = ["VladyslavPodrazhanskyi <vladislav304304@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
flake8 = "^4.0.1"
boto3 = "^1.20.31"
pyspark = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
